Day1: Setup + Python basics

--- a/day1_setup_ipyn.ipynb
+++ b/day1_setup_ipyn.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOwIhL4zDsZaRoQAod4aZ+Z",
+      "authorship_tag": "ABX9TyPYUVNOV3IMIyt42DuYP3q0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,58 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "smQyheBkFKoH"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "smQyheBkFKoH",
+        "outputId": "1b2513b7-2745-43fd-ce9a-9916a5b12360"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python 3.12.12 (main, Oct 10 2025, 08:52:57) [GCC 11.4.0]\n"
+          ]
+        }
+      ],
+      "source": [
+        "import sys\n",
+        "print(\"Python\", sys.version)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# lists, loop, function\n",
+        "nums = [1,2,3,4]\n",
+        "def square_list(xs): return [x*x for x in xs]\n",
+        "print(square_list(nums))\n",
+        "for i,n in enumerate(nums): print(i, n)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HkIyyOVxG1VS",
+        "outputId": "791496e1-584f-4ffc-8f41-fe83ef7275c8"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16]\n",
+            "0 1\n",
+            "1 2\n",
+            "2 3\n",
+            "3 4\n"
+          ]
+        }
+      ]
     }
   ]
 }
